first working version of logger using asyncio

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [twitch]
-server = irc.chat.twitch.tv
-port = 6667
 username = em_ai
+host = irc.chat.twitch.tv
+port = 443
+ssl = True
+default_channel = #ch0ise,#rocketbeanstv
 password = oauth:d67n1gzjj36gjfy6al94q4sygyq2nf
 clientid = eog7pnevkskcz8llebvikyljovx081u
 
