--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,7 @@
+[api]
+port = 8080
+host = localhost
+
 [twitch]
 username = em_ai
 host = irc.chat.twitch.tv
@@ -10,3 +14,7 @@ clientid = eog7pnevkskcz8llebvikyljovx081u
 database = emai
 host = localhost
 port = 27017
+
+[dataset]
+interval_min = 5
+interval_max = 120
