sample data sets can now be retreived

--- a/config.ini
+++ b/config.ini
@@ -16,5 +16,9 @@ host = localhost
 port = 27017
 
 [dataset]
+filter_commands = True
+filter_replies = True
 interval_min = 5
 interval_max = 120
+random_sample_pool = 100
+random_sample_size = 5
