rewrote stream recorder. streams get now converted to mp4 and stored on disk. fixes #2

--- a/config.ini
+++ b/config.ini
@@ -15,6 +15,10 @@ database = emai
 host = localhost
 port = 27017
 
+[recording]
+ffmpeg_binary = /usr/local/bin/ffmpeg
+video_dir = ../static/videos
+
 [dataset]
 filter_commands = True
 filter_replies = True
