--- a/package.json
+++ b/package.json
@@ -19,22 +19,24 @@
   "author": "Martin Juhasz",
   "license": "ISC",
   "devDependencies": {
-    "isomorphic-fetch": "^2.2.1",
-
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0",
-
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "html-webpack-plugin": "^2.22.0",
+    "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.15.2",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
+    "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "html-webpack-plugin": "^2.22.0"
+    "webpack-dev-server": "^1.14.1"
   }
 }
