--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.15.2",
+    "normalizr": "^2.2.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
