--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "lint": "eslint ./src/**/*.js",
-    "compile": "browserify client/index.js -o static/js/index.js -t [ babelify --presets [ es2015 react ] ]",
-    "compile:wp": "webpack",
+    "compile": "webpack",
     "start": "npm run dev",
     "dev": "node --harmony build/webpack-dev-server",
     "dev:client": "webpack-dev-server --display-error-details --progress --colors --port 8081",
@@ -26,12 +25,13 @@
     "babel-preset-react": "^6.11.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
-    "material-ui": "^0.15.2",
     "normalizr": "^2.2.1",
     "react": "^15.2.1",
+    "react-bootstrap": "^0.30.0",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
+    "react-router-bootstrap": "^0.23.1",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
