--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.11.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.14.1",
     "normalizr": "^2.2.1",
     "react": "^15.2.1",
     "react-bootstrap": "^0.30.0",
