--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint ./src/**/*.js",
+    "lint": "eslint ./client",
     "compile": "webpack",
     "start": "npm run dev",
     "dev": "node --harmony build/webpack-dev-server",
@@ -19,10 +19,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "eslint": "^3.2.2",
+    "eslint-plugin-react": "^6.0.0",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.14.1",
