first steps towards active learning

--- a/config.ini
+++ b/config.ini
@@ -19,8 +19,9 @@ port = 27017
 ffmpeg_binary = /usr/local/bin/ffmpeg
 video_dir = ../static/videos
 
-[dataset]
-interval_min = 1
+[training]
+sample_distribution_min = 50
+sample_distribution_max = 80
 interval_max = 120
 random_sample_pool = 100
 random_sample_size = 5
