--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "chart.js": "^2.2.1",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
     "html-webpack-plugin": "^2.22.0",
@@ -32,6 +33,7 @@
     "normalizr": "^2.2.1",
     "react": "^15.2.1",
     "react-bootstrap": "^0.30.0",
+    "react-chartjs": "git://github.com/reactjs/react-chartjs.git#chartjs-v2",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
