--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile": "webpack",
     "start": "npm run dev",
     "dev": "node --harmony build/webpack-dev-server",
-    "dev:client": "webpack-dev-server --display-error-details --progress --colors --port 8081",
+    "dev:client": "webpack-dev-server --display-error-details --progress --colors --port 8081 --host 0.0.0.0",
     "dev:no-debug": "npm run dev -- --no_debug",
     "test": "echo \"Oops: no frontend tests yet :(\" && exit 1",
     "test:dev": "npm run test -- --watch",
