--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "chart.js": "^2.2.1",
+    "css-loader": "^0.25.0",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
     "html-webpack-plugin": "^2.22.0",
@@ -38,10 +39,12 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
     "react-router-bootstrap": "^0.23.1",
+    "react-select": "^1.0.0-rc.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "style-loader": "^0.13.1",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
