--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,28 @@
 aiohttp==0.21.6
+aiohttp-cors==0.4.0
+aiohttp-utils==2.0.1
+chardet==2.3.0
+click==6.6
+cycler==0.10.0
+docopt==0.6.2
+ffmpy==0.1.0
+greenlet==0.4.10
+gunicorn==19.6.0
 irc3==0.9.3
 livestreamer==1.12.2
+marshmallow==2.9.0
+matplotlib==1.5.2
 mongoengine==0.10.6
+motor==0.6.2
+numpy==1.11.1
+pymongo==2.8
+pyparsing==2.1.8
+python-dateutil==2.5.3
+python-mimeparse==1.5.2
+pytz==2016.6.1
+requests==2.10.0
+scikit-learn==0.17.1
+scipy==0.18.0
+six==1.10.0
+umongo==0.9.0
+venusian==1.0
