removed statistics and changed video dir

--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ port = 27017
 
 [recording]
 ffmpeg_binary = /usr/local/bin/ffmpeg
-video_dir = ../static/videos
+video_dir = static/videos
 
 [training]
 sample_distribution_min = 50
